# mofumofu

./: LICENSE  README.md
mofumofu-backend/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy_docker-compose.yml  docker-compose.yml
mofumofu-backend/markdown-service/: Dockerfile
mofumofu-backend/markdown-service/src/: markdown.ts
mofumofu-backend/migration/: Cargo.toml
mofumofu-backend/migration/src/: common.rs  lib.rs  m20250717_064915_user_roles.rs  m20250717_064916_create_users.rs  m20250717_064916_users.rs  m20250718_155830_user_oauth_connections.rs  m20250718_162041_posts_states_enum.rs  m20250718_162056_hashtags.rs  m20250718_162057_posts.rs  m20250718_162058_drafts.rs  m20250718_162102_comments.rs  m20250811_004451_action_types.rs  m20250811_004802_target_types.rs  m20250811_004808_system_events.rs  m20250815_103030_create_like_target_type_enum.rs  m20250815_103031_create_likes_table.rs  m20250820_061026_create_report_reason_enum.rs
mofumofu-backend/src/: main.rs  state.rs
mofumofu-backend/src/config/: db_config.rs
mofumofu-backend/src/connection/: cloudflare_r2.rs  database.rs  http.rs  meilisearch.rs  mod.rs  redis_connection.rs
mofumofu-backend/src/dto/: common.rs  mod.rs
mofumofu-backend/src/dto/oauth/: mod.rs
mofumofu-backend/src/dto/post/: mod.rs
mofumofu-backend/src/entity/: comments.rs  common.rs  likes.rs  mod.rs  posts.rs  reports.rs  system_events.rs  users.rs
mofumofu-backend/src/microservices/: admin_tasks_client.rs  email_client.rs  markdown_cache_client.rs  markdown_client.rs  mod.rs  post_client.rs
mofumofu-backend/src/middleware/: anonymous_user.rs  auth.rs  mod.rs
mofumofu-backend/src/repository/: mod.rs
mofumofu-backend/src/repository/auth/: create_refresh_token.rs  find_refresh_token_by_jti_and_token.rs  mod.rs  revoke_refresh_token.rs
mofumofu-backend/src/repository/comment/: create_comment.rs  delete_comment.rs  get_comment_by_id.rs  get_comments.rs  get_reply_count.rs  mod.rs  update_comment.rs  update_like_count.rs  update_reply_count.rs
mofumofu-backend/src/repository/draft/: create_draft.rs  delete_draft.rs  get_draft_by_id.rs  get_draft_count.rs  get_drafts_by_user.rs  mod.rs  (+1 more)
mofumofu-backend/src/service/: mod.rs
mofumofu-backend/src/tasks_bridge/: mod.rs  post_client.rs  profile_client.rs  search_client.rs
mofumofu-backend/src/utils/: generate_random_string.rs  image_processor.rs  image_validator.rs  mod.rs  profile_task_client.rs  save_user_profile_to_r2.rs
mofumofu-backend/tasks/: CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  celerybeat-schedule.bak  celerybeat-schedule.dir  docker-compose.yml  monitor_celery.py  pyproject.toml  start_beat.py  start_worker.py
mofumofu-backend/tasks/app/: main.py  utils.py
textuna-backend/: Cargo.toml
textuna-backend/migration/src/: m20250717_064916_create_users.rs
textuna-backend/src/entity/: mod.rs  posts.rs
textura-backend/tasks/: README.md  pyproject.toml
textura-backend/tasks/app/: main.py  utils.py
(+800 files in other folders)
