[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "opensearch-py>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
]

[tool.uv]
dev-dependencies = [
    "ruff<1.0.0,>=0.2.2",
]

[tool.ruff]
target-version = "py310"